--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <img
         src="./asset/arrow.png"
         alt="Arrow icon"
-        class="icon skill-arrow"
+        class="icon arrow"
         onclick="location.href='./#projects'"
       />
     </section>
