--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./asset/profile.jpg  "
+            src="./img.jpg  "
             alt="Profile picture"
             class="about-pic"
           />
